--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,44 @@
 #pageContainer {
     width: auto;
+    top: 0; right: 0; left: 0; bottom: 0;
     height: auto;
 }
 
+#restartButton {
+    /*width: 40px;
+    height: 30px;*/
+    position: absolute;
+    display: block;
+    clear: both;
+}
+
 #grid {
+    clear: both;
     display: grid;
     grid-template-columns: repeat(16, 70px);
-    width: 80%;
-    height: 80%;
-    margin: 30px auto;
-    padding: 30px;
+    top: 30px; right: 0; left: 0; bottom: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding-top: 30px;
 }
 
 .cell {
     display: inline-block;
     width: 40px;
     height: 40px;
-    margin: 16px;
-    background-color: blue;
+    background-color: grey;
 }
 
+.createdCell {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background-color: grey;
+}
 .hoverCell {
     display: inline-block;
     width: 40px;
     height: 40px;
-    margin: 16px;
-    background-color: red;
+    background-color: black;
 }
