--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,35 @@
+div {
+    display: block;
+}
 #pageContainer {
     width: auto;
+    display: block;
     top: 0; right: 0; left: 0; bottom: 0;
     height: auto;
 }
 
 #restartButton {
-    /*width: 40px;
-    height: 30px;*/
-    position: absolute;
-    display: block;
+    position: relative;
     clear: both;
+}
+
+.etch_sketch {
+    padding-top: 70px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 850px;
+    width: 800px;
+    background-color: blue;
+    border-radius: 40px;
 }
 
 #grid {
     clear: both;
     display: grid;
-    grid-template-columns: repeat(16, 70px);
-    top: 30px; right: 0; left: 0; bottom: 0;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    padding-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 640px;
+    height: 640px;
 }
 
 .cell {
@@ -30,12 +39,6 @@
     background-color: grey;
 }
 
-.createdCell {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    background-color: grey;
-}
 .hoverCell {
     display: inline-block;
     width: 40px;
