--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 div {
     display: block;
 }
+
 #pageContainer {
     width: auto;
     display: block;
@@ -9,11 +10,22 @@ div {
 }
 
 #restartButton {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
     position: relative;
     clear: both;
 }
 
-.etch_sketch {
+#clearButton {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    clear: both;
+}
+
+#etch_sketch {
     padding-top: 70px;
     margin-left: auto;
     margin-right: auto;
@@ -33,6 +45,13 @@ div {
 }
 
 .cell {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background-color: grey;
+}
+
+.multicolorCell {
     display: inline-block;
     width: 40px;
     height: 40px;
