--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,14 @@ div {
     margin-left: auto;
     margin-right: auto;
     position: relative;
-    p
+    clear: both;
+}
+
+#restartButton {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
     clear: both;
 }
 
@@ -39,6 +46,8 @@ div {
 #grid {
     clear: both;
     display: grid;
+    border: 1px solid black;
+    border-radius: 4px;
     margin-left: auto;
     margin-right: auto;
     width: 640px;
@@ -49,7 +58,7 @@ div {
     display: inline-block;
     width: 40px;
     height: 40px;
-    background-color: grey;
+    background-color: white;
 }
 
 .multicolorCell {
@@ -64,4 +73,5 @@ div {
     width: 40px;
     height: 40px;
     background-color: black;
+    opacity: 0.1;
 }
